<resources>
    <string name="app_name">COVID-19 Country Data</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_country">Pick country</string>
    <string name="action_about">About</string>
    <string name="ok">ok</string>
    <string name="action_search">Search</string>
    <string name="model_clicked_pattern">You clicked on the rank %1$d word: %2$s!</string>
    <string name="action_locate">Locate</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_location">No location available</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Address not found</string>
    <string name="data_fetch_error">Getting data failed, please try again in a few minutes</string>
    <string name="add_country">Add country</string>
    <string name="author">Author: Sebastian Berk</string>
    <string name="ub_number">UB Number: 17009930</string>
    <string name="data_from">"COVID-19 Data from REST API: "</string>
    <string name="action_add_country">Add new country</string>
    <string name="empty_list_text">Your list is empty</string>
    <string name="empty_list_add_text">Click the + button to add country</string>
    <string name="deaths">Deaths: </string>
    <string name="cases">Cases: </string>
    <string name="recovered">Recovered: </string>
    <string name="last_update">Last update: </string>
    <string name="no_reports">No data for given date</string>
    <string name="action_remove">Remove</string>
    <string name="selected_country_card_settings">Settings</string>
    <string name="action_refresh_data">Refresh data</string>
    <string name="action_update_item">Update</string>
    <string name="action_update_all">Update all</string>
    <string name="error_country_remove">Error during country removal</string>
    <string name="error_country_retrieve">Error during country retrieval</string>
    <string name="updating_complete">Updating countries completed!</string>
    <string name="update_failed">Updating data failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>